--- a/Pasta_Require/package.json
+++ b/Pasta_Require/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pasta_require",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "calculadora2.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
